# AI-SMM

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  kind-config.yaml  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/local/: all-in-one.yaml
k8s/ollama/base/: deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml
k8s/ollama/overlays/cpu/: kustomization.yaml
k8s/ollama/overlays/cuda/: kustomization.yaml
k8s/ollama/overlays/rocm/: kustomization.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
ollama_setup/: Dockerfile  entrypoint.sh
pages/: 1_Carica_e_Classifica.py  2_Genera_Contenuto.py  3_Chat_con_Agente_Graph.py  4_Explainability.py
scripts/: deploy-ollama.sh  deploy.sh  detect-gpu.sh  start.sh
src/: main.py
src/api/: admin.py  auth.py  endpoints.py  health.py
src/api/services/: ollama_client.py
src/core/: agent_graph.py  agent_tools.py  config.py  exceptions.py  logging.py  prompts.yaml  schemas.py  security.py
src/middleware/: explainability.py
src/services/: auth_models.py  auth_service.py  database.py  email_service.py  financial.py  knowledge.py  llm.py  models.py  processing.py  vector_store.py
src/ui/components/: sidebar.py
src/ui/pages/: admin_page.py  chat_page.py  login_page.py  profile_page.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_health.py  test_schemas.py
