[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dependencies>=7.7.1",
    "fastapi>=0.116.1",
    "google-api-python-client>=2.181.0",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.35.0",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]
# Imposta la lunghezza massima della linea
line-length = 120

# Seleziona le regole di linting da applicare
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]


# Ignora specifiche regole se necessario
# ignore = ["E501"]

# Escludi file o directory dall'analisi
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "Dockerfile",
]

[tool.ruff.format]
# Formattazione in stile Black
quote-style = "double"
